# DesktopPet-Aemeath

./: .gitignore  CMakeLists.txt
assets/: resources.qrc
data/: Aalto.txt  Aemeath.txt  Augusta.txt  Baizhi.txt  Brant.txt  Buling.txt  Calcharo.txt  Camellya.txt  CantarellaFisalia.txt  CarlottaMontelli.txt  Cartethyia.txt  Changli.txt  Chixia.txt  CiacconaToccata.txt  Danjin.txt  Denia.txt  Encore.txt  Galbrena.txt  Hiyuki.txt  Iuno.txt  Jinhsi.txt  Jiyan.txt  KuchibaChisa.txt  Lingyang.txt  Lumi.txt  Lupa.txt  LuukHerssen.txt  Lynae.txt  Mornye.txt  Mortefi.txt  Phoebe.txt  Phrolova.txt  Qiuyuan.txt  Roccia.txt  Rover.txt  Sanhua.txt  Sigrika.txt  Taoqi.txt  TheShorekeeper.txt  Verina.txt  (+7 more)
include/: AVLTree.h  AVLTree.inl  ai_chat_dialog.h  clock_menu.h  desktop_pet.h  native_web_view.h  settings_menu.h  wke.h
src/: ai_chat_dialog.cpp  clock_menu.cpp  desktop_pet.cpp  main.cpp  settings_menu.cpp
